--- a/Siyudad_na_Cavite.mw
+++ b/Siyudad_na_Cavite.mw
@@ -1,14 +1,9 @@
-[[File:Ph_locator_cavite_cavite.png|right|270px]] 							
-									
+{{Infobox location}}
+													
 Say '''Siyudad na Cavite''' et kumapat ya klase siyudad ed luyag na [[Cavite]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 101,120 totoo. <br> 	
 Walay kabaleg tan sukat to ya 10.89 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4100. 			
 									
-
-
-Say '''Siyudad na Cavite''' ([[Salitan Chabacano]] de Cavite: ''Ciudad de Cavite''; [[salitan English]]: ''Cavite City''; [[salitan Tagalog]]: ''Lungsod ng Kabite'') sakey 4th class  ya [[siyudad]] ed [[luyag]] na [[Cavite]], [[Filipinas]].
-
 == Listaan na Barangay ==
-[[File:Cavite City.jpg|right|thumb|200px|Siyudad na Cavite]]
 Addaan iti 5 a distrito ti Ciudad ti Cavite, ti Dalahican, Santa Cruz, Caridad, San Antonio, ken ti San Roque. Nabingbingay dagitoy a distrito iti 84 a [[barangay]].
 
 <table border=0><tr>
@@ -101,7 +96,6 @@ Addaan iti 5 a distrito ti Ciudad ti Cavite, ti Dalahican, Santa Cruz, Caridad, 
 * Barangay 62-B (Kangkong B)
 </td></tr></table>
 
-
 == Ofisial a websait ==
 * [http://www.cavitecity.gov.ph Ofisial a websait na Gobyerno na Siyudad na Cavite]
 * [http://archive.spaceimaging.com/ikonos/2/kpms/2004/03//browse.233666.crss_sat.0.0.jpg Ladawan a satellite, Marso 2004]
@@ -109,7 +103,10 @@ Addaan iti 5 a distrito ti Ciudad ti Cavite, ti Dalahican, Santa Cruz, Caridad, 
 * [http://www.cavitecitylibrary.home.ph Biblioteca ken museo ti Ciudad ti Cavite]
 
 
-{{Cavite}}
+== Saray reperensiya ==
+{{Reflist}}
 
+{{Cavite}}
 {{stub}}
+
 [[Category:Saray siyudad na Filipinas]]
