--- a/Dasmariñas.mw
+++ b/Dasmariñas.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_cavite_dasmarinas.png|right|270px]] 							
-									
+{{Infobox location}}
+												
 Say '''Dasmariñas''' et kumanem ya klase siyudad ed luyag na [[Cavite]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 575,817 totoo. <br> 	
-Walay kabaleg tan sukat to ya 90.13 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4114. 			
-									
+Walay kabaleg tan sukat to ya 90.13 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4114. 	
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Cavite}}
+											
 [[Category:Saray siyudad na Filipinas]]
