--- a/General_Trias.mw
+++ b/General_Trias.mw
@@ -1,6 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-[[Image:Ph locator cavite gen trias.png|thumb|General Trías]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Trias, Cavite
 | 1990 = 52888		
@@ -14,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''General Trias''' et siyudad ed luyag na [[Cavite]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 243,322 totoo. <br> Walay kabaleg tan sukat to ya 81.46 sq. km. Sikato et walad anim ya distrito. Say zip code to et 4107. 
-
 
 ==Saray baranggay==
 
@@ -60,22 +58,8 @@ Say saray 32 ed [[baranggay]] kila dia!, ed ragay na 1 na komunidad ed Javalera.
 * San Juan II
 |}
 
-==Saray lokasiyon==
-===Tinda===
-* Ivy's Eatery
-* Kris Jay-Lyn Store
-* Majorose Store
-
-===Eskuela===
-* [[Claremont School]] (pre-school, grade, secondary; [[2000]])
-* [[Saint Francis School]]
-
-===Kainan===
-* [[Jollibee]]
-* [[KFC]]
-* [[McDonald's]]
-
-==Lokasiyon ed Hiyograpiko==
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Geographic location
 |North=[[Noveleta, Cavite|Noveleta]], [[Kawit, Cavite|Kawit]]
@@ -90,8 +74,7 @@ Say saray 32 ed [[baranggay]] kila dia!, ed ragay na 1 na komunidad ed Javalera.
 |image=
 }}
 
-{{philippines-geo-stub}}
-
 {{Cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray siyudad na Filipinas]]
