--- a/Template:Cavite.mw
+++ b/Template:Cavite.mw
@@ -26,7 +26,7 @@
 * [[Bacoor]]
 * [[Siyudad na Cavite]]
 * [[Dasmariñas]]
-* [[General Trias, Cavite|General Trias]]
+* [[General Trias]]
 * [[Imus]]
 * [[Tagaytay]]
 * [[Trece Martires]]
