--- a/Tagaytay.mw
+++ b/Tagaytay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_cavite_tagaytay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tagaytay''' et kumadwa ya klase siyudad ed luyag na [[Cavite]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 62,030 totoo. <br> 	
-Walay kabaleg tan sukat to ya 65.00 sq. km. Sikato et walad  7th ya distrito. Say zip code to et 4120. 			
+Walay kabaleg tan sukat to ya 65.00 sq. km. Sikato et walad  7th ya distrito. Say zip code to et 4120. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Cavite}}	
 									
 [[Category:Saray siyudad na Filipinas]]
