--- a/Alcantara,_Cebu.mw
+++ b/Alcantara,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu alcantara.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alcantara, Cebu
 | 1990 = 9559		
@@ -30,10 +31,14 @@ Alcantara Cebu 1.JPG
 Alcantara Cebu 2.JPG
 </gallery>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}															
+{{Cebu}}	
+														
 [[Category:Saray baley na Cebu]]
