--- a/Alegria,_Cebu.mw
+++ b/Alegria,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu alegria.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alegria, Cebu
 | 1990 = 18253		
@@ -13,7 +14,6 @@
 |}}
 Say '''Alegria''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 22,072 totoo. Walay kabaleg tan sukat to ya 89.49 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6030.	
 
-
 ==Saray barangay==
 * Compostela
 * Guadalupe
@@ -25,10 +25,14 @@ Say '''Alegria''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]].
 * Santa Filomena
 * Valencia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}															
+{{Cebu}}	
+														
 [[Category:Saray baley na Cebu]]
