--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -9,7 +9,7 @@
 * [[Alcoy, Cebu|Alcoy]]
 * [[Alegria, Cebu|Alegria]]
 * [[Aloguinsan, Cebu|Aloguinsan]]
-* [[Argao, Cebu|Argao]]
+* [[Argao]]
 * [[Asturias, Cebu|Asturias]]
 * [[Badian, Cebu|Badian]]
 * [[Balamban]]
