--- a/Argao.mw
+++ b/Argao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu argao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Argao, Cebu
 | 1990 = 52157		
@@ -13,7 +14,6 @@
 |}}
 Say '''Argao''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 69,503 totoo. Walay kabaleg tan sukat to ya 191.5 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6021.	
 	
-
 ==Saray barangay==
 * Alambijud
 * Anajao
@@ -61,10 +61,14 @@ Say '''Argao''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Uno
 * Ubaub
 * Usmad
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
