--- a/Asturias.mw
+++ b/Asturias.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu asturias.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Asturias, Cebu
 | 1990 = 30404		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Asturias''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 44,732 totoo. Walay kabaleg tan sukat to ya 190.45 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 6042.	
-
 
 ==Saray barangay==
 * Agbanga
@@ -43,10 +43,14 @@ Say '''Asturias''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 * Tubod, Asturias
 * Ubogon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}															
+{{Cebu}}	
+														
 [[Category:Saray baley na Cebu]]
