--- a/Bantayan.mw
+++ b/Bantayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu bantayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bantayan, Cebu
 | 1990 = 59893		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bantayan''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 74,785 totoo. Walay kabaleg tan sukat to ya 81.68 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6042.	
 	
-
 ==Saray barangay==
 * Atop-atop
 * Baigad
@@ -41,10 +41,14 @@ Say '''Bantayan''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. 
 * Bantigue (Pob.)
 * Ticad (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}		
+												
 [[Category:Saray baley na Cebu]]
