--- a/Barili.mw
+++ b/Barili.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator cebu barili.png|right|230px]]
-[[File:Barili Cebu 1.JPG|230px|right]]
+{{Infobox location}}
+
 [[File:Barili Cebu 2.JPG|230px|right]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barili, Cebu
@@ -15,7 +15,6 @@
 |}}
 Say '''Barili''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 65,524 totoo. Walay kabaleg tan sukat to ya 122.21 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 6036.	
 	
-
 ==Saray barangay==
 * Azucena
 * Bagakay
@@ -60,10 +59,14 @@ Say '''Barili''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. 
 * Tubod
 * Vito
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
