--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -15,7 +15,7 @@
 * [[Balamban]]
 * [[Bantayan, Cebu|Bantayan]]
 * [[Barili, Cebu|Barili]]
-* [[Boljoon, Cebu|Boljoon]]
+* [[Boljoon]]
 * [[Borbon, Cebu|Borbon]]
 * [[Carmen, Cebu|Carmen]] 
 * [[Catmon, Cebu|Catmon]]
