--- a/Borbon.mw
+++ b/Borbon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu borbon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Borbon, Cebu
 | 1990 = 23239		
@@ -13,7 +14,6 @@
 |}}
 Say '''Borbon''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 31,598 totoo. Walay kabaleg tan sukat to ya 120.94 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6008.	
 		
-
 ==Saray barangay==
 * Bagacay
 * Bili
@@ -35,10 +35,14 @@ Say '''Borbon''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]].
 * Tabunan
 * Tagnucan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
