--- a/Carmen,_Cebu.mw
+++ b/Carmen,_Cebu.mw
@@ -1,6 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-[[Image:Ph_locator_cebu_carmen.png|right]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carmen, Cebu
 | 1990 = 29265		
@@ -17,7 +16,6 @@ Say '''Carmen''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. 
 Unong ed 2010 Census, say papulasyon to et 44,648 totoo. Walay kabaleg tan sukat to ya 84.78 sq. km. Sikato et walad kumalima  distrito. Say zip code to et 6005.
 
 == Listaan na Barangay ==
-[[image:Carmen Cebu.JPG|right|250px]]
 Say Karmen walay 21 ya [[barangay]]:
 
 * Baring
@@ -42,6 +40,8 @@ Say Karmen walay 21 ya [[barangay]]:
 * Upper Natimao-an
 * Cogon ed Sagor
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
