--- a/Catmon.mw
+++ b/Catmon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu catmon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Catmon, Cebu
 | 1990 = 19773		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Catmon''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 28,320 totoo. Walay kabaleg tan sukat to ya 109.64 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6006.	
-
 
 ==Saray barangay==
 * Agsuwao
@@ -36,10 +36,14 @@ Say '''Catmon''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. 
 * Corazon (Poblacion)
 * Flores (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}															
+{{Cebu}}	
+														
 [[Category:Saray baley na Cebu]]
