--- a/Compostela,_Cebu.mw
+++ b/Compostela,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu compostela.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Compostela, Cebu
 | 1990 = 22006		
@@ -13,7 +14,6 @@
 |}}
 Say '''Compostela''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 42,574 totoo. Walay kabaleg tan sukat to ya 53.9 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6003.	
 	
-
 ==Saray barangay==
 * Bagalnga
 * Basak
@@ -33,10 +33,14 @@ Say '''Compostela''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas
 * Tamiao
 * Tubigan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
