--- a/Consolacion.mw
+++ b/Consolacion.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu consolacion.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Consolacion, Cebu
 | 1990 = 41270		
@@ -13,7 +14,6 @@
 |}}
 Say '''Consolacion''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 106,649 totoo. Walay kabaleg tan sukat to ya 147.2 sq. km. Sikato et walad kumanem ya distrito. Say zip code to et 6001.	
 	
-
 ==Saray barangay==
 * Cabangahan
 * Cansaga
@@ -37,10 +37,14 @@ Say '''Consolacion''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]
 * Tolotolo
 * Tugbongan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
