--- a/Cordova.mw
+++ b/Cordova.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu cordoba.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cordoba, Cebu
 | 1990 = 22331		
@@ -13,7 +14,6 @@
 |}}
 Say '''Cordova''' et kumanem ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 50,353 totoo. Walay kabaleg tan sukat to ya 17.15 sq. km. Sikato et walad kumanem ya distrito. Say zip code to et 6017.	
 	
-
 ==Saray barangay==
 * Alegria
 * Bangbang
@@ -29,10 +29,14 @@ Say '''Cordova''' et kumanem ya klase baley ed luyag na [[Cebu]], [[Pilipinas]].
 * Poblacion
 * San Miguel
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
