--- a/Daanbantayan.mw
+++ b/Daanbantayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu daanbantayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Daanbantayan, Cebu
 | 1990 = 58771		
@@ -13,7 +14,6 @@
 |}}
 Say '''Daanbantayan''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 74,897 totoo. Walay kabaleg tan sukat to ya 92.27 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6013.	
 		
-
 ==Saray barangay==
 * Aguho
 * Bagay
@@ -36,10 +36,14 @@ Say '''Daanbantayan''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas
 * Tinubdan
 * Tominjao
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
