--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -23,7 +23,7 @@
 * [[Consolacion, Cebu|Consolacion]]
 * [[Cordova, Cebu|Cordova]]
 * [[Daanbantayan]]
-* [[Dalaguete, Cebu|Dalaguete]]
+* [[Dalaguete]]
 * [[Dumanjug, Cebu|Dumanjug]]
 * [[Ginatilan, Cebu|Ginatilan]]
 * [[Liloan, Cebu|Liloan]]
