--- a/Dalaguete.mw
+++ b/Dalaguete.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator cebu dalaguete.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dalaguete, Cebu
@@ -14,7 +14,6 @@
 |}}
 Say '''Dalaguete''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 63,239 totoo. Walay kabaleg tan sukat to ya 154.96 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6022.	
 	
-
 ==Saray barangay==
 * Ablayan
 * Babayongan
@@ -49,10 +48,14 @@ Say '''Dalaguete''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]].
 * Tuba
 * Salug
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
