--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -24,7 +24,7 @@
 * [[Cordova, Cebu|Cordova]]
 * [[Daanbantayan]]
 * [[Dalaguete]]
-* [[Dumanjug, Cebu|Dumanjug]]
+* [[Dumanjug]]
 * [[Ginatilan, Cebu|Ginatilan]]
 * [[Liloan, Cebu|Liloan]]
 * [[Madridejos, Cebu|Madridejos]]
