--- a/Dumanjug.mw
+++ b/Dumanjug.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator cebu dumanjug.png|right|230px]]
-[[File:Dumanjug Cebu 1.JPG|230px|right]]
+{{Infobox location}}
+
 [[File:Dumanjug Cebu 2.JPG|230px|right]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dumanjug, Cebu
@@ -54,10 +54,14 @@ Say '''Dumanjug''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 * Tubod-Dugoan
 * Poblacion Central
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
