--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -25,7 +25,7 @@
 * [[Daanbantayan]]
 * [[Dalaguete]]
 * [[Dumanjug]]
-* [[Ginatilan, Cebu|Ginatilan]]
+* [[Ginatilan]]
 * [[Liloan, Cebu|Liloan]]
 * [[Madridejos, Cebu|Madridejos]]
 * [[Malabuyoc, Cebu|Malabuyoc]]
