--- a/Ginatilan.mw
+++ b/Ginatilan.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator cebu ginatilan.png|right|270px]]	
-			
+{{Infobox location}}
+		
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ginatilan, Cebu
 | 1990 = 11160		
@@ -14,7 +14,6 @@
 |}}
 Say '''Ginatilan''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 15,327 totoo. Walay kabaleg tan sukat to ya 70.1 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6026.	
 	
-
 ==Saray barangay==
 * Anao
 * Cagsing
@@ -31,10 +30,14 @@ Say '''Ginatilan''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas
 * Salamanca
 * San Roque
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
