--- a/Liloan,_Cebu.mw
+++ b/Liloan,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu liloan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Liloan, Cebu
 | 1990 = 42587		
@@ -13,7 +14,6 @@
 |}}
 Say '''Liloan''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 100,500 totoo. Walay kabaleg tan sukat to ya 45.92 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6002.	
 		
-
 ==Saray barangay==
 * Cabadiangan
 * Calero
@@ -30,10 +30,14 @@ Say '''Liloan''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Un
 * Tayud
 * Yati
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
