--- a/Madridejos.mw
+++ b/Madridejos.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu madridejos.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Madridejos, Cebu
 | 1990 = 25746		
@@ -13,7 +14,6 @@
 |}}
 Say '''Madridejos''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 34,905 totoo. Walay kabaleg tan sukat to ya 23.95 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6053.	
 		
-
 ==Saray barangay==
 * Bunakan
 * Kangwayan
@@ -30,10 +30,14 @@ Say '''Madridejos''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas
 * Tarong
 * Tugas
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
