--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -28,7 +28,7 @@
 * [[Ginatilan]]
 * [[Liloan, Cebu|Liloan]]
 * [[Madridejos, Cebu|Madridejos]]
-* [[Malabuyoc, Cebu|Malabuyoc]]
+* [[Malabuyoc]]
 * [[Medellin, Cebu|Medellin]]
 * [[Minglanilla, Cebu|Minglanilla]]
 * [[Moalboal, Cebu|Moalboal]]
