--- a/Malabuyoc.mw
+++ b/Malabuyoc.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu malabuyoc.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malabuyoc, Cebu
 | 1990 = 14628		
@@ -13,7 +14,6 @@
 |}}
 Say '''Malabuyoc''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 18,426 totoo. Walay kabaleg tan sukat to ya 69.27 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6029.	
 	
-
 ==Saray barangay==
 * Armeña (Cansilongan)
 * Tolosa (Calatagan)
@@ -30,10 +30,14 @@ Say '''Malabuyoc''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas
 * Baranggay I (Poblacion)
 * Baranggay II (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
