--- a/Medellin.mw
+++ b/Medellin.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu medellin.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Medellin, Cebu
 | 1990 = 34184		
@@ -13,7 +14,6 @@
 |}}
 Say '''Medellin''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 50,047 totoo. Walay kabaleg tan sukat to ya 73.19 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6012.	
 		
-
 ==Saray barangay==
 * Antipolo
 * Curva
@@ -35,10 +35,14 @@ Say '''Medellin''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 * Maharuhay
 * Mahawak
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
