--- a/Minglanilla.mw
+++ b/Minglanilla.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu minglanilla.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Minglanilla, Cebu
 | 1990 = 50875		
@@ -13,7 +14,6 @@
 |}}
 Say '''Minglanilla''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 113,178 totoo. Walay kabaleg tan sukat to ya 65.6 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 6046.	
 		
-
 ==Saray barangay==
 * Cadulawan
 * Calajo-an
@@ -35,10 +35,14 @@ Say '''Minglanilla''' et unaan ya klase baley ed luyag na [[Cebu]], [[Pilipinas]
 * Vito
 * Tungkil
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
