--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -31,7 +31,7 @@
 * [[Malabuyoc]]
 * [[Medellin, Cebu|Medellin]]
 * [[Minglanilla, Cebu|Minglanilla]]
-* [[Moalboal, Cebu|Moalboal]]
+* [[Moalboal]]
 * [[Oslob, Cebu|Oslob]]
 * [[Pilar, Cebu|Pilar]]
 * [[Pinamungajan]]
