--- a/Moalboal.mw
+++ b/Moalboal.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator cebu moalboal.png|right|225px]]
-[[File:Moalboal Cebu 4.JPG|225px|right]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Moalboal, Cebu
 | 1990 = 20041		
@@ -31,10 +31,14 @@ Say '''Moalboal''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 *Tuble
 *Tunga
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
