--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -32,7 +32,7 @@
 * [[Medellin, Cebu|Medellin]]
 * [[Minglanilla, Cebu|Minglanilla]]
 * [[Moalboal]]
-* [[Oslob, Cebu|Oslob]]
+* [[Oslob]]
 * [[Pilar, Cebu|Pilar]]
 * [[Pinamungajan]]
 * [[Poro, Cebu|Poro]]
