--- a/Oslob.mw
+++ b/Oslob.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu oslob.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Oslob, Cebu
 | 1990 = 19782		
@@ -13,7 +14,6 @@
 |}}
 Say '''Oslob''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 26,116 totoo. Walay kabaleg tan sukat to ya 134.75 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6025.	
 			
-
 ==Saray barangay==
 * Alo
 * Bangcogon
@@ -37,10 +37,14 @@ Say '''Oslob''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. U
 * Tan-awan
 * Tumalog
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}												
+{{Cebu}}	
+											
 [[Category:Saray baley na Cebu]]
