--- a/Pilar,_Cebu.mw
+++ b/Pilar,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu pilar.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pilar, Cebu
 | 1990 = 11499		
@@ -14,7 +15,6 @@
 
 Say '''Pilar''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 11,564 totoo. Walay kabaleg tan sukat to ya 32.42 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6048.	
 		
-
 ==Saray barangay==
 * Biasong
 * Cawit
@@ -30,10 +30,14 @@ Say '''Pilar''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. 
 * Villahermosa
 * Imelda
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
