--- a/Pinamungajan.mw
+++ b/Pinamungajan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu pinamungahan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pinamungajan, Cebu
 | 1990 = 40026		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pinamungajan''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 57,997 totoo. Walay kabaleg tan sukat to ya 109.16 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6039.	
 	
-
 ==Saray barangay==
 * Anislag
 * Anopog
@@ -42,10 +42,14 @@ Say '''Pinamungajan''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipin
 * Tupas
 * Tutay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
