--- a/Poro.mw
+++ b/Poro.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu poro.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Poro, Cebu
 | 1990 = 19150		
@@ -13,7 +14,6 @@
 |}}
 Say '''Poro''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 23,498 totoo. Walay kabaleg tan sukat to ya 63.59 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6049.	
 		
-
 ==Saray barangay==
 * Adela
 * Altavista
@@ -33,10 +33,14 @@ Say '''Poro''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Un
 * Teguis
 * Western Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
