--- a/Ronda.mw
+++ b/Ronda.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu ronda.png|right|230px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ronda, Cebu
 | 1990 = 15018		
@@ -29,16 +30,18 @@ Say '''Ronda''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. U
 * Tupas
 * Vive
 
-
 <gallery>
-Ronda Cebu 1.JPG
 Ronda Cebu 2.JPG
 </gallery>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
