--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -37,7 +37,7 @@
 * [[Pinamungajan]]
 * [[Poro, Cebu|Poro]]
 * [[Ronda, Cebu|Ronda]]
-* [[Samboan, Cebu|Samboan]]
+* [[Samboan]]
 * [[San Fernando, Cebu|San Fernando]]
 * [[San Francisco, Cebu|San Francisco]]
 * [[San Remigio, Cebu|San Remigio]]
