--- a/Samboan.mw
+++ b/Samboan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu samboan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Samboan, Cebu
 | 1990 = 15005		
@@ -13,7 +14,6 @@
 |}}
 Say '''Samboan''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 18,613 totoo. Walay kabaleg tan sukat to ya 45.16 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6027.	
 		
-
 ==Saray barangay==
 * Basak
 * Bonbon
@@ -31,10 +31,14 @@ Say '''Samboan''' et kumalima ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 * Tangbo
 * Monteverde
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
