--- a/San_Fernando,_Cebu.mw
+++ b/San_Fernando,_Cebu.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator cebu san fernando.png|right|240px]]
-[[File:San Fernando Cebu.JPG|240px|right]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Fernando, Cebu
 | 1990 = 35051		
@@ -37,10 +37,14 @@ Say '''San Fernando''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipin
 * Tubod
 * Ilaya
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}		
+												
 [[Category:Saray baley na Cebu]]
