--- a/San_Remigio,_Cebu.mw
+++ b/San_Remigio,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu san remigio.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Remigio, Cebu
 | 1990 = 36124		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Remigio''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 51,394 totoo. Walay kabaleg tan sukat to ya 95.27 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6011.	
 	
-
 ==Saray barangay==
 * Anapog
 * Argawanon
@@ -43,10 +43,14 @@ Say '''San Remigio''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipina
 * To-ong
 * Victoria
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
