--- a/Santa_Fe,_Cebu.mw
+++ b/Santa_Fe,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu santa fe.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Fe, Cebu
 | 1990 = 20838		
@@ -13,7 +14,6 @@
 |}}
 Say '''Santa Fe''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 27,270 totoo. Walay kabaleg tan sukat to ya 28.05 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6047.	
 	
-
 ==Saray barangay==
 * Hagdan
 * Hilantagaan
@@ -26,10 +26,14 @@ Say '''Santa Fe''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 * Pooc
 * Talisay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
