--- a/Santander.mw
+++ b/Santander.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu santander.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santander, Cebu
 | 1990 = 11831		
@@ -13,7 +14,6 @@
 |}}
 Say '''Santander''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 16,105 totoo. Walay kabaleg tan sukat to ya 29.53 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6026.	
 		
-
 ==Saray barangay==
 * Bunlan
 * Cabutongan
@@ -26,10 +26,14 @@ Say '''Santander''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]
 * Talisay
 * Canlumacad
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}													
+{{Cebu}}	
+												
 [[Category:Saray baley na Cebu]]
