--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -43,7 +43,7 @@
 * [[San Remigio, Cebu|San Remigio]]
 * [[Santa Fe, Cebu|Santa Fe]]
 * [[Santander, Cebu|Santander]]
-* [[Sibonga, Cebu|Sibonga]]
+* [[Sibonga]]
 * [[Sogod, Cebu|Sogod]]
 * [[Tabogon, Cebu|Tabogon]]
 * [[Tabuelan, Cebu|Tabuelan]]
