--- a/Sogod,_Cebu.mw
+++ b/Sogod,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu sogod.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sogod, Cebu
 | 1990 = 23426		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sogod''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 30,626 totoo. Walay kabaleg tan sukat to ya 119.23 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 6007.	
 	
-
 ==Saray barangay==
 * Ampongol
 * Bagakay
@@ -34,10 +34,14 @@ Say '''Sogod''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. U
 * Takay
 * Pansoy
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
