--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -45,8 +45,8 @@
 * [[Santander, Cebu|Santander]]
 * [[Sibonga]]
 * [[Sogod, Cebu|Sogod]]
-* [[Tabogon, Cebu|Tabogon]]
-* [[Tabuelan, Cebu|Tabuelan]]
+* [[Tabogon]]
+* [[Tabuelan]]
 * [[Tuburan, Cebu|Tuburan]]
 * [[Tudela, Cebu|Tudela]]
 |group2 = Saray siyudad
