--- a/Tabogon.mw
+++ b/Tabogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu tabogon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tabogon, Cebu
 | 1990 = 24664		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tabogon''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 33,024 totoo. Walay kabaleg tan sukat to ya 101.35 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6009.	
 	
-
 ==Saray barangay==
 * Alang-alang
 * Caduawan
@@ -41,10 +41,14 @@ Say '''Tabogon''' et kumatlo ya klase baley ed luyag na [[Cebu]], [[Pilipinas]].
 * Taba-ao
 * Tapul
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
