--- a/Tabuelan.mw
+++ b/Tabuelan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu tabuelan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tabuelan, Cebu
 | 1990 = 15515		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tabuelan''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 22,292 totoo. Walay kabaleg tan sukat to ya 141.13 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 6044.	
 	
-
 ==Saray barangay==
 * Bongon
 * Kanlim-ao
@@ -28,10 +28,14 @@ Say '''Tabuelan''' et kumapat ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]
 * Tigbawan
 * Villahermosa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}		
+												
 [[Category:Saray baley na Cebu]]
