--- a/Tuburan,_Cebu.mw
+++ b/Tuburan,_Cebu.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cebu tuburan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tuburan, Cebu
 | 1990 = 43078		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tuburan''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 58,914 totoo. Walay kabaleg tan sukat to ya 224.5 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 6043.	
 	
-
 ==Saray barangay==
 * Alegria
 * Amatugan
@@ -70,10 +70,14 @@ Say '''Tuburan''' et kumadwa ya klase baley ed luyag na [[Cebu]], [[Pilipinas]].
 * Baranggay VII (Poblacion)
 * Baranggay VIII (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cebu}}														
+{{Cebu}}	
+													
 [[Category:Saray baley na Cebu]]
