--- a/Carcar.mw
+++ b/Carcar.mw
@@ -1,7 +1,10 @@
-[[File:Ph_locator_cebu_carcar.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Carcar''' et kumapat ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 107,323 totoo. <br> 	
 Walay kabaleg tan sukat to ya 116.78 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6019. 			
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cebu}}
 									
