--- a/Danao.mw
+++ b/Danao.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_cebu_danao.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Danao''' et kumatlo ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 119,252 totoo. <br> 	
-Walay kabaleg tan sukat to ya 107.30 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6004. 			
+Walay kabaleg tan sukat to ya 107.30 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6004. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Cebu}}	
 									
 [[Category:Saray siyudad na Filipinas]]
