--- a/Naga,_Cebu.mw
+++ b/Naga,_Cebu.mw
@@ -1,9 +1,11 @@
-[[File:Ph_locator_cebu_naga.png|right|230px]] 							
+{{Infobox location}}				
 									
 Say '''Naga, Cebu''' et kumanem ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 101,571 totoo. <br> 	
-Walay kabaleg tan sukat to ya 101.97 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6037. 			
+Walay kabaleg tan sukat to ya 101.97 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6037. 	
 
+== Saray reperensiya ==
+{{Reflist}}		
 
-[[File:Naga Cebu.JPG|250px|none]]
+{{Cebu}}
 
 [[Category:Saray siyudad na Filipinas]]
