--- a/Toledo.mw
+++ b/Toledo.mw
@@ -1,12 +1,15 @@
-[[File:Ph_locator_cebu_toledo.png|right|230px]] 							
+{{Infobox location}}					
 									
 Say '''Toledo, Cebu''' et kumatlo ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 157,078 totoo. <br> 	
 Walay kabaleg tan sukat to ya 216.28 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6038. 			
 
-
 <gallery>
-Toledo Cebu 1.JPG
 Toledo Cebu 2.JPG
 </gallery>
+
+== Saray reperensiya ==
+{{Reflist}}
+
+{{Cebu}}
 
 [[Category:Saray siyudad na Filipinas]]
