--- a/Siyudad_na_Cebu.mw
+++ b/Siyudad_na_Cebu.mw
@@ -1,27 +1,11 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Siyudad na Cebú<br>City of Cebu<br>''Dakbayan sa Sugbo''<br>''Lungsod ng Sebu''<br>''Город Себу'' |
- sealfile     = |
- locatormapfile = Ph_locator_cebu cebu.png |
- caption      = Map of [[Cebu]] showing the location of Cebu City. |
- region       = [[Pegley na Visayas]] (Region VII) |
- province     = [[Cebu]] |
- districts    = first vs. 2nd district of Cebu |
- barangays    = 80 |
- class        =  |
- mayor        = [[Michael Rama]] |
- founded      = [[1565]] (ed koloniya na Kastila)<br>[[1680]] (ed baley)|
- cityhood     = Pebrero 24, [[1937]] (ed siyudad)|
- areakm2      = 315 |
- pop2000      = 866,171 |
- popden2000   = 2700 |
- coordinates  = 10°17′N 123°54′E |
+{{Infobox location
+|zoom=7
+|image_caption=Siyudad na Cebú, ed harang so siyudad ya abalaten
 }}
 
-[[IMAGE:Cebu City.jpg|right|thumb|250px|Siyudad na Cebú, ed harang so siyudad ya abalaten]] Say '''Cebú''' sakey kabesera ya siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Cebu]].
+Say '''Cebú''' sakey kabesera ya siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Cebu]].
 
-==Historiya==
+==Awaran==
 === Ed walay pa ed saray Kastila ===
 Mauswagong kabalayan na ang Sugbo mga tulo ka libo ka tuig kaniadto sa pa sakopa sa Espanya. Nakigbinayloay kini sa China ug uban pang kanasuran sa sidlakang-habagatang Asya.
 
@@ -158,8 +142,8 @@ File:Magellan's Cross full.jpg|Interior of the [[Kruz na Magallanes]]
 
 * [[Ferdinand Magellan]]
 
-==References==
-<references/> 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Ofisial na websait==
 * [http://www.cebucity.gov.ph www.cebucity.gov.ph]
