--- a/Siyudad_na_Lapu-Lapu.mw
+++ b/Siyudad_na_Lapu-Lapu.mw
@@ -1,10 +1,11 @@
-[[File:Ph_locator_cebu_lapu-lapu.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Siyudad na Lapu-Lapu''' et unaan ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 350,467 totoo. <br> 	
 Walay kabaleg tan sukat to ya 58.10 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6015. 			
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cebu}}
-
-									
+								
 [[Category:Saray siyudad na Filipinas]]
