--- a/Mandaue.mw
+++ b/Mandaue.mw
@@ -1,9 +1,10 @@
-[[File:Ph_locator_cebu_mandaue.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Mandaue''' et unaan ya klase siyudad ed luyag na [[Cebu]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 331,320 totoo. <br> 	
 Walay kabaleg tan sukat to ya 25.18 sq. km. Sikato et walad  kumanem ya distrito. Say zip code to et 6014. 			
 
-
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Cebu}}
 									
