--- a/Compostela,_Davao_de_Oro.mw
+++ b/Compostela,_Davao_de_Oro.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley compostela.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Compostela, Compostela Valley
 | 1990 = 53546		
@@ -13,7 +14,6 @@
 |}}
 Say '''Compostela''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 81,934 totoo. Walay kabaleg tan sukat to ya 287 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8803.	
 	
-
 ==Saray barangay==
 * Bagongon
 * Gabi
@@ -32,10 +32,14 @@ Say '''Compostela''' et unaan ya klase baley ed luyag na [[Compostela Valley]], 
 * Tamia
 * Aurora
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}			
+											
 [[Category:Saray baley na Compostela Valley]]
