--- a/Laak.mw
+++ b/Laak.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley laak.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Laak, Compostela Valley
 | 1990 = 35895		
@@ -13,7 +14,6 @@
 |}}
 Say '''Laak''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 70,856 totoo. Walay kabaleg tan sukat to ya 768 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8810.	
 	
-
 ==Saray barangay==
 * Aguinaldo
 * Banbanon
@@ -56,10 +56,14 @@ Say '''Laak''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pili
 * Santo Niño
 * Sisimon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}	
+													
 [[Category:Saray baley na Compostela Valley]]
