--- a/Mabini,_Davao_de_Oro.mw
+++ b/Mabini,_Davao_de_Oro.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley mabini.png|right|270px]]		
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mabini, Compostela Valley
 | 1990 =		
@@ -13,7 +14,6 @@
 |}}
 Say '''Mabini''' et kumadwa ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 36,807 totoo. Walay kabaleg tan sukat to ya 400 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8807.	
 	
-
 ==Saray barangay==
 * Cadunan
 * Pindasan
@@ -27,10 +27,14 @@ Say '''Mabini''' et kumadwa ya klase baley ed luyag na [[Compostela Valley]], [[
 * Pangibiran
 * San Antonio
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}	
+													
 [[Category:Saray baley na Compostela Valley]]
