--- a/Maco.mw
+++ b/Maco.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley maco.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maco, Compostela Valley
 | 1990 = 55991		
@@ -53,10 +54,14 @@ Say '''Maco''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pili
 * Tagbaros
 * Teresa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}		
+												
 [[Category:Saray baley na Compostela Valley]]
