--- a/Monkayo.mw
+++ b/Monkayo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley monkayo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Monkayo, Compostela Valley
 | 1990 = 58239		
@@ -13,7 +14,6 @@
 |}}
 Say '''Monkayo''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 94,827 totoo. Walay kabaleg tan sukat to ya 609.61 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8805.	
 	
-
 ==Saray barangay==
 * Awao
 * Babag
@@ -37,10 +37,14 @@ Say '''Monkayo''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[P
 * Union
 * Mount Diwata
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}	
+													
 [[Category:Saray baley na Compostela Valley]]
