+{{Kalendaryo}} (via JWB)

--- a/Agosto.mw
+++ b/Agosto.mw
@@ -1,4 +1,4 @@
-{{August}}
+{{Kalendaryo}}
 
 '''Agosto''' Kumawaloran bulan na taon so August diad [[Kalendario nen Gregory]] san sakey ed pitoran bulan nen [[Gregory]] ya walay 31 agew.
 
