--- a/Hunyo.mw
+++ b/Hunyo.mw
@@ -1,3 +1,3 @@
-{{June}}
+{{Kalendaryo}}
 
 Kumaanimeran bulan na taon so October diad [[Kalendario nen Gregory]] san sakey ed apatiran bulan nen [[Gregory]] ya walay 30 agew.
