+{{Kalendaryo}} (via JWB)

--- a/Hulyo.mw
+++ b/Hulyo.mw
@@ -1,3 +1,3 @@
-{{July}}
+{{Kalendaryo}}
 
 Kumawaloran bulan na taon so Hulyo diad [[Kalendario nen Gregory]] san sakey ed pitoran bulan nen [[Gregory]] ya walay 31 agew.
