+{{Kalendaryo}} (via JWB)

--- a/Setyembre.mw
+++ b/Setyembre.mw
@@ -1,3 +1,3 @@
-{{September}}
+{{Kalendaryo}}
 
 Kumasiameran bulan na taon so September diad [[Kalendario nen Gregory]] san sakey ed apatiran bulan nen [[Gregory]] ya walay 30 agew.
