--- a/Nobyembre.mw
+++ b/Nobyembre.mw
@@ -1,3 +1,3 @@
-{{November}}
+{{Kalendaryo}}
 
 Kumalabinsakey bulan na taon so November diad [[Kalendario nen Gregory]] san sakey ed apatiran bulan nen [[Gregory]] ya walay 30 agew.
