--- a/Disyembre.mw
+++ b/Disyembre.mw
@@ -1,3 +1,3 @@
-{{December}}
+{{Kalendaryo}}
 
 Kumalabinduan bulan na taon so December diad [[Kalendario nen Gregory]] san sakey ed pitoran bulan nen [[Gregory]] ya walay 31 agew.
