--- a/Alamada.mw
+++ b/Alamada.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato alamada.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alamada, Cotabato  
 | 1990 = 33688		
@@ -13,7 +14,6 @@
 |}}
 Say '''Alamada''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 56,813 totoo. Walay kabaleg tan sukat to ya 787.5 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9413.	
 		
-
 ==Saray barangay==
 * Bao
 * Barangiran
@@ -34,10 +34,14 @@ Say '''Alamada''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]
 * Mirasol
 * Raradangan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}												
+{{Cotabato}}	
+											
 [[Category:Saray baley na Cotabato]]
