--- a/Libungan.mw
+++ b/Libungan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato libungan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libungan, Cotabato  
 | 1990 = 68971		
@@ -13,7 +14,6 @@
 |}}
 Say '''Libungan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 45,295 totoo. Walay kabaleg tan sukat to ya 172.5 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9411.	
 		
-
 ==Saray barangay==
 * Abaga
 * Baguer
@@ -36,10 +36,14 @@ Say '''Libungan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipin
 * Sinawingan
 * Ulamian
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}													
+{{Cotabato}}	
+												
 [[Category:Saray baley na Cotabato]]
